# sphinxext-altair

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: build.yml  lint.yml
sphinxext_altair/: __init__.py  altairplot.py
tests/: conftest.py  test_altairplot.py
tests/roots/test-altairplot/: conf.py  errors_warnings.rst  index.rst
