# this file contains:
# 1 build system configuration
# 2 project configuration
# 3 tool configuration, for:
# - hatch
# - black
# - ruff
# - pytest
# - mypy

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinxext-altair"
authors = [ {name = "sphinxext-altair Contributors"} ]
dependencies = [
    "altair>=4.0.0",
    "docutils",
    "jinja2",
    "sphinx",
    "typing_extensions>=4.0.1; python_version<\"3.8\"",
]
description = "sphinxext-altair: Sphinx extension for embedding Altair charts"
readme = "README.md"
keywords = [
    "altair",
    "sphinxext"
]
requires-python = ">=3.7"
dynamic = ["version"]
license-files = { paths = ["LICENSE"] }
classifiers= [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/altair-viz/sphinxext-altair"

[project.optional-dependencies]
dev = [
    "hatch",
    "ruff",
    "black<24",
    "pytest",
    "mypy",
    "types-docutils",
    # ipython is only installed for the convenience of the developer
    "ipython"
]

[tool.hatch.version]
path = "sphinxext_altair/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "/sphinxext_altair"
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = [
    "black --diff --color --check .",
    "ruff check .",
    "mypy sphinxext_altair tests",
    "python -m pytest tests"
]

build-test-docs = ["sphinx-build -b html tests/roots/test-altairplot tests/roots/test-altairplot/_build/html"]
serve-test-docs = ["(cd tests/roots/test-altairplot/_build/html && python -m http.server)"]


[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | build
  | dist
  | .venv
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle-error
    "E",
    # pycodestyle-warning
    "W",
    # pyflakes
    "F",
    # flake8-tidy-imports
    "TID"
]
exclude = [
    ".git",
    "build",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = [
    "altair.*"
]
ignore_missing_imports = true
